--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>moja strona</h1>
     <p>huj w dupe policji</p>
     <p>elo elo</p>
+    <h4>lubie w dupe</h4>
 </body>
 </html>
